common/force-app/main/default/objects/Masterplan__c/Masterplan__c.object-meta.xml
<CustomObject>
    <label>VCPP Plan</label>
    <nameField>
        <label>Stage plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCPP Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>