common/force-app/main/default/objects/Masterplan__c/fields/Continuing_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Continuing_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Continuing Appointment for a service or a number of services over a period.</inlineHelpText>
    <label>Continuing Appointment</label>
    <type>Checkbox</type>
</CustomField>