common/force-app/main/default/objects/Masterplan__c/fields/Continuing_Appointment_Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Continuing_Appointment_Start_Date_c__c</fullName>
    <inlineHelpText>Continuing Appointment start date.</inlineHelpText>
    <label>Continuing Appointment Start Date</label>
    <type>Date</type>
</CustomField>