common/force-app/main/default/objects/Masterplan__c/fields/Covenants__c.field-meta.xml
<CustomField>
    <fullName>Covenants__c</fullName>
    <inlineHelpText>Link to the covenants document. NOTE: This is the public link to the document saved in the related tab against the Master Plan.</inlineHelpText>
    <label>Covenants</label>
    <type>Url</type>
</CustomField>