common/force-app/main/default/objects/Masterplan__c/fields/Covenants_apply__c.field-meta.xml
<CustomField>
    <fullName>Covenants_apply__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if there are covenants in place. If there are then ensure that the covenants document is uploaded to the Master Plan and the Staging Plan</inlineHelpText>
    <label>Covenants apply</label>
    <type>Checkbox</type>
</CustomField>