common/force-app/main/default/objects/Masterplan__c/fields/Development_Name__c.field-meta.xml
<CustomField>
    <fullName>Development_Name__c</fullName>
    <label>Development Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>