common/force-app/main/default/objects/Masterplan__c/fields/Forecast_Registration_Date_del__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Registration_Date_del__c</fullName>
    <label>Forecast Registration Date</label>
    <type>Date</type>
</CustomField>