common/force-app/main/default/objects/Masterplan__c/fields/Form_6_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Form_6_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please only check this box when the form 6 file for the stage has been uploaded.</inlineHelpText>
    <label>Form 6 Uploaded</label>
    <type>Checkbox</type>
</CustomField>