common/force-app/main/default/objects/Masterplan__c/fields/Gross_Sales_Commission__c.field-meta.xml
<CustomField>
    <fullName>Gross_Sales_Commission__c</fullName>
    <inlineHelpText>Add the % of agreed sales commission to VCPP. (Including GST)</inlineHelpText>
    <label>Gross Sales Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>