common/force-app/main/default/objects/Masterplan__c/fields/Initial_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Initial_Deposit__c</fullName>
    <label>Initial Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>