common/force-app/main/default/objects/Masterplan__c/fields/Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VCPP Plans (Law Firm)</relationshipLabel>
    <relationshipName>VCPP_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>