common/force-app/main/default/objects/Masterplan__c/fields/Law_Firm_Bank_c__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Bank_c__c</fullName>
    <formula>Law_Firm__r.Law_Firm_Bank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Firm Bank</label>
    <type>Text</type>
</CustomField>