common/force-app/main/default/objects/Masterplan__c/fields/Law_Firm_Branch_c__c.field-meta.xml
<CustomField>
    <fullName>Law_Firm_Branch_c__c</fullName>
    <formula>Law_Firm__r.Law_Firm_Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Law Firm Branch</label>
    <type>Text</type>
</CustomField>