common/force-app/main/default/objects/Masterplan__c/fields/Lawyers__c.field-meta.xml
<CustomField>
    <fullName>Lawyers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lawyers</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VCPP Plans</relationshipLabel>
    <relationshipName>VCPP_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>