common/force-app/main/default/objects/Masterplan__c/fields/Link_to_Form_6__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Form_6__c</fullName>
    <inlineHelpText>Link to the document in files in the record</inlineHelpText>
    <label>Link to Form 6</label>
    <type>Url</type>
</CustomField>