common/force-app/main/default/objects/Masterplan__c/fields/Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Budget__c</fullName>
    <inlineHelpText>Add the % of the allowed marketing budget for this stage. (Including GST)</inlineHelpText>
    <label>Marketing Budget</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>