common/force-app/main/default/objects/Masterplan__c/fields/Master_Plan__c.field-meta.xml
<CustomField>
    <fullName>Master_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Plan</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Master Plan can be Included</errorMessage>
        <filterItems>
            <field>Masterplan__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Master Plan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Masterplan__c</referenceTo>
    <relationshipLabel>Staging Plans</relationshipLabel>
    <relationshipName>Masterplans</relationshipName>
    <type>Lookup</type>
</CustomField>