common/force-app/main/default/objects/Masterplan__c/fields/Master_Plan_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Master_Plan_Dashboard__c</fullName>
    <label>Master Plan Dashboard</label>
    <type>Url</type>
</CustomField>