common/force-app/main/default/objects/Masterplan__c/fields/Minimum_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Deposit__c</fullName>
    <label>Minimum Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>