common/force-app/main/default/objects/Masterplan__c/fields/Net_Commission_to_VCPP__c.field-meta.xml
<CustomField>
    <fullName>Net_Commission_to_VCPP__c</fullName>
    <formula>Gross_Commission__c -  Total_Sales_Rep_Commission__c -  Total_Contracts_Administration_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Commission to VCPP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>