common/force-app/main/default/objects/Masterplan__c/fields/Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Plan_URL__c</fullName>
    <label>Plan URL</label>
    <type>Url</type>
</CustomField>