common/force-app/main/default/objects/Masterplan__c/fields/Price_List_and_Stage_Plan__c.field-meta.xml
<CustomField>
    <fullName>Price_List_and_Stage_Plan__c</fullName>
    <label>Price List and Stage Plan</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>