common/force-app/main/default/objects/Masterplan__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the lots in this stage are registered. If they&apos;re registered then add the registered date below.</inlineHelpText>
    <label>Registered</label>
    <type>Checkbox</type>
</CustomField>