common/force-app/main/default/objects/Masterplan__c/fields/Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>Registered_Date__c</fullName>
    <inlineHelpText>The date the lots in this stage were registered.</inlineHelpText>
    <label>Registered Date</label>
    <type>Date</type>
</CustomField>