common/force-app/main/default/objects/Masterplan__c/fields/Sales_Rep_payment_structure__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_payment_structure__c</fullName>
    <inlineHelpText>Select the payment structure that is approved for this stage for the sales rep.</inlineHelpText>
    <label>Sales Rep payment structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% at settlement</fullName>
            </value>
            <value>
                <fullName>50% unconditional and 50% at settlement</fullName>
            </value>
            <value>
                <fullName>50% unconditional and 50% at slab down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>