common/force-app/main/default/objects/Masterplan__c/fields/Single_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Single_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Single Appointment for a particular service or services.</inlineHelpText>
    <label>Single Appointment</label>
    <type>Checkbox</type>
</CustomField>