common/force-app/main/default/objects/Masterplan__c/fields/SP_RP_Number__c.field-meta.xml
<CustomField>
    <fullName>SP_RP_Number__c</fullName>
    <inlineHelpText>Plan number</inlineHelpText>
    <label>SP/RP Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>