common/force-app/main/default/objects/Masterplan__c/fields/Total_Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Marketing_Budget__c</fullName>
    <formula>Marketing_Budget__c * Gross_SPV_Sale_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Marketing Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>