common/force-app/main/default/objects/Masterplan__c/fields/Trust_Account_BSB_c__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account_BSB_c__c</fullName>
    <formula>Law_Firm__r.Trust_Account_BSB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Account BSB</label>
    <type>Text</type>
</CustomField>