common/force-app/main/default/objects/Masterplan__c/fields/Trust_Account_Name_C__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account_Name_C__c</fullName>
    <formula>Law_Firm__r.Trust_Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Account Name</label>
    <type>Text</type>
</CustomField>