common/force-app/main/default/objects/Masterplan__c/fields/Trust_Account_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Trust_Account_Number_c__c</fullName>
    <formula>Law_Firm__r.Trust_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Account Number</label>
    <type>Text</type>
</CustomField>