common/force-app/main/default/objects/Masterplan__c/fields/Vendor_SPV__c.field-meta.xml
<CustomField>
    <fullName>Vendor_SPV__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vendor - SPV</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VCPP Plans (Vendor - SPV)</relationshipLabel>
    <relationshipName>VCPP_Plans2</relationshipName>
    <type>Lookup</type>
</CustomField>