common/force-app/main/default/objects/Masterplan__c/recordTypes/Master_Plan.recordType-meta.xml
<RecordType>
    <fullName>Master_Plan</fullName>
    <active>true</active>
    <label>Master Plan</label>
</RecordType>