common/force-app/main/default/objects/Masterplan__c/recordTypes/Staging_Plan.recordType-meta.xml
<RecordType>
    <fullName>Staging_Plan</fullName>
    <active>true</active>
    <label>Staging Plan</label>
</RecordType>